fix: reduce scrollbars and change github edit to master

--- a/assets/plugins/_scrollbars.scss
+++ b/assets/plugins/_scrollbars.scss
@@ -2,8 +2,8 @@
 @import "variables";
 
 ::-webkit-scrollbar {
-  width: 8.5px;
-  height: 8.5px;
+  width: 6.5px;
+  height: 6.5px;
 }
 
 * {
